fix broken layout

--- a/workPage.css
+++ b/workPage.css
@@ -189,7 +189,7 @@
 .grid {
   display: grid;
   grid-gap: 60px;
-  width: 100%;
+  max-width: 100%;
 }
 
 .grid-two {
